--- a/Macchi-Craig-project2/index.html
+++ b/Macchi-Craig-project2/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>DJ Spinnerz</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
